Update package.json to add the repository key
so that npm.com and yarnpkg.com can show a link to the github project

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "name": "Rabin Julien",
     "email": "julienr114@gmail.com"
   },
+  "repository": "WildCodeSchool/vue-calendar-heatmap",
   "keywords": [
     "vue",
     "vuejs",
